[gd_scene load_steps=17 format=2]

[ext_resource path="res://game/game_elements/mobs/mob_scripts/DestroyerBot.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/mobArt/DestroyerBot.png" type="Texture" id=3]
[ext_resource path="res://assets/shaders/hurt.tres" type="Shader" id=5]
[ext_resource path="res://assets/animations/mobsHurt.tres" type="Animation" id=6]
[ext_resource path="res://assets/animations/hurt.tres" type="Animation" id=7]
[ext_resource path="res://assets/sfx/hit.mp3" type="AudioStream" id=8]

[sub_resource type="ShaderMaterial" id=15]
resource_local_to_scene = true
shader = ExtResource( 5 )
shader_param/color = Color( 1, 1, 1, 1 )
shader_param/flashState = 0.0

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2160, 0, 720, 720 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 720, 720, 720 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 720, 720, 720, 720 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1440, 720, 720, 720 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 720, 720 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 720, 0, 720, 720 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1440, 0, 720, 720 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ) ],
"loop": false,
"name": "death",
"speed": 10.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": true,
"name": "move",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=32]
radius = 44.0
height = 18.0

[node name="Destroyer" type="KinematicBody2D" groups=["mobs"]]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 15 )
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 1 )
animation = "move"
frame = 2
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite"]
anims/Hurt = ExtResource( 6 )
anims/hurt = ExtResource( 7 )

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2( -1, 8.5 )
rotation = 1.5708
shape = SubResource( 32 )

[node name="HitSoundEffect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "SFX"

[node name="Muzzle1" type="Position2D" parent="."]
position = Vector2( 53, 6 )

[node name="Muzzle2" type="Position2D" parent="."]
position = Vector2( 8, 6 )

[node name="ShootCooldown" type="Timer" parent="."]

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="ShootCooldown" to="." method="_on_ShootCooldown_timeout"]
